--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@
 # under the License.
 
 [tox]
-envlist = flake8,{py27,py35}-backend_{mysql,sqlite,postgres}-env_{docker,kubernetes}
+envlist = flake8,{py27,py35,py37}-backend_{mysql,sqlite,postgres}-env_{docker,kubernetes}
 skipsdist = True
 
 [global]
@@ -34,6 +34,7 @@ deps =
 basepython =
     py27: python2.7
     py35: python3.5
+    py37: python3.7
 
 setenv =
   HADOOP_DISTRO=cdh
